@@ -1,3 +1,7 @@
+DarkIce next release
+
+    o ported to OpenBSD, though real-time scheduling not yet supported
+
 15-02-2004: DarkIce 0.14 released
 
     o added ALSA support, thanks to Christian Forster
